src/test/ui/regions/regions-assoc-type-region-bound-in-trait-not-met.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:14:10
   |
LL | impl<'a> Foo<'static> for &'a i32 {
   |          ^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the impl at 14:6...
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:14:6
   |
LL | impl<'a> Foo<'static> for &'a i32 {
   |      ^^
   = note: ...so that the types are compatible:
           expected Foo<'static>
              found Foo<'static>
   = note: but, the lifetime must be valid for the static lifetime...
note: ...so that the type `&i32` will meet its required lifetime bounds
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:14:10
   |
LL | impl<'a> Foo<'static> for &'a i32 {
   |          ^^^^^^^^^^^^

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:19:13
   |
LL | impl<'a,'b> Foo<'b> for &'a i64 {
   |             ^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the impl at 19:6...
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:19:6
   |
LL | impl<'a,'b> Foo<'b> for &'a i64 {
   |      ^^
   = note: ...so that the types are compatible:
           expected Foo<'b>
              found Foo<'_>
note: but, the lifetime must be valid for the lifetime 'b as defined on the impl at 19:9...
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:19:9
   |
LL | impl<'a,'b> Foo<'b> for &'a i64 {
   |         ^^
note: ...so that the type `&i32` will meet its required lifetime bounds
  --> $DIR/regions-assoc-type-region-bound-in-trait-not-met.rs:19:13
   |
LL | impl<'a,'b> Foo<'b> for &'a i64 {
   |             ^^^^^^^

error: aborting due to 2 previous errors

